--- a/README
+++ b/README
@@ -29,34 +29,47 @@ FiXme consists of the following files:
 * Description
 =============
 
-	This package provides you with a way of inserting fixme notes in
-documents being developped (in draft mode). Such notes can appear in the
-margin of the document, as index entries, in the log file and as warnings on
-stdout. It is also possible to summarize them in a list, and in the index. If
-your document is in a final version, any remaining fixme note will produce an
-error. FiXme also comes with support for AUC-TeX.
+	This package provides you with a way of inserting fixme notes in your
+documents. Such notes can appear inline, as marginal notes, footnotes, index
+entries, in the log file and as warnings on stdout. It is also possible to
+summarize them in a list. When you switch from draft to final mode, any
+remaining fixme note will be logged, but removed from the document's body.
+Additionally, critical notes will abort compilation with an informative
+message. FiXme also comes with support for AUC-TeX.
 
 
 * Changes
 =========
 
+** Version 2.0
+--------------
+*** New feature: note levels
+thanks to an optional argument to \fixme.
+*** More translation work.
+*** Suggestions from Kasper B. Graversen <kbg@dkik.dk>.
+
+
 ** Version 1.5
 --------------
-*** New appearance: `text'. Directly in the text, in parentheses.
+*** New layout option: `inline'
+puts notes directly in the text.
 
 ** Version 1.4
 --------------
 *** Support for the koma-script classes.
-*** Fix bug reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
-the list of fixme's didn't work when called before the first fixme note.
+*** Fix bug in \listoffixmes
+reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
+the command didn't work when called before the first fixme note.
 
 ** Version 1.3
 --------------
-*** Support for Italian thanks to Riccardo Murri <murri@phc.unipi.it>
+*** Support for Italian
+thanks to Riccardo Murri <murri@phc.unipi.it>.
 
 ** Version 1.2
 --------------
-*** Support for German thanks to Harald Harders <h.harders@tu-bs.de>
+*** Support for German
+thanks to Harald Harders <h.harders@tu-bs.de>.
 
 
 * Installation
